homeworks/bakhtishaiev/module-3/lesson-10/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app
  labels:
    app: course-app
spec:
  replicas: 10
  selector:
    matchLabels:
      app: course-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: course-app
    spec:
      containers:
        - name: course-app
          image: bakhtishaiev/course-app:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
